VPC/VPCPublic.cf.json
{
    "AWSTemplateFormatVersion": "2010-09-09",
    "Description": "Sets up a multi AZ VPC with private and public subnets.",
    "Mappings": {
        "EnvSettings": {
            "Prod": {
                "HostedZone": "prod",
                "Base": "10.1",
                "VPC": "10.1.0.0/16",
                "Zone1Public": "10.1.0.0/24",
                "Zone2Public": "10.1.1.0/24",
                "Zone3Public": "10.1.2.0/24",
                "Zone4Public": "10.1.3.0/24",
                "Zone1Private": "10.1.4.0/24",
                "Zone2Private": "10.1.5.0/24"
            },
            "Demo": {
                "HostedZone": "demo",
                "Base": "10.2",
                "VPC": "10.2.0.0/16",
                "Zone1Public": "10.2.0.0/24",
                "Zone2Public": "10.2.1.0/24",
                "Zone1Private": "10.2.2.0/24",
                "Zone2Private": "10.2.3.0/24"
            },
            "Sandbox": {
                "HostedZone": "sandbox",
                "Base": "10.3",
                "VPC": "10.3.0.0/16",
                "Zone1Public": "10.3.0.0/24",
                "Zone2Public": "10.3.1.0/24",
                "Zone1Private": "10.3.2.0/24",
                "Zone2Private": "10.3.3.0/24"
            },
            "Test": {
                "HostedZone": "test",
                "Base": "10.4",
                "VPC": "10.4.0.0/16",
                "Zone1Public": "10.4.0.0/24",
                "Zone2Public": "10.4.1.0/24",
                "Zone1Private": "10.4.2.0/24",
                "Zone2Private": "10.4.3.0/24"
            },
            "DevOps": {
                "HostedZone": "devops",
                "Base": "10.5",
                "VPC": "10.5.0.0/16",
                "Zone1Public": "10.5.0.0/24",
                "Zone2Public": "10.5.1.0/24",
                "Zone1Private": "10.5.2.0/24",
                "Zone2Private": "10.5.3.0/24"
            }
        }
    },
    "Parameters": {
        "Environment": {
            "Type": "String",
            "Default": "Prod",
            "AllowedValues": [
                "Prod", "Demo", "Sandbox", "Test", "DevOps"
            ],
            "Description": "Enter the Name for the 7mb environment."
        }
    },
    "Resources": {
        "VPCMultiAZ": {
            "Type": "AWS::EC2::VPC",
            "Properties": {
                "CidrBlock": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "VPC"] },
                "EnableDnsSupport": true,
                "EnableDnsHostnames": true,
                "InstanceTenancy": "default",
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.VPC" }
                    }
                ]
            }
        },
        "Zone1PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": ["0", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
                "CidrBlock": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "Zone1Public"] },
                "MapPublicIpOnLaunch": false,
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.Zone1.Public" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "Zone2PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": ["1", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
                "CidrBlock": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "Zone2Public"] },
                "MapPublicIpOnLaunch": false,
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.Zone2.Public" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "Zone3PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
                "CidrBlock": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "Zone3Public"] },
                "MapPublicIpOnLaunch": false,
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.Zone3.Public" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "Zone4PublicSubnet": {
            "Type": "AWS::EC2::Subnet",
            "Properties": {
                "AvailabilityZone": { "Fn::Select": ["2", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
                "CidrBlock": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "Zone4Public"] },
                "MapPublicIpOnLaunch": false,
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.Zone4.Public" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "PublicRouteTable": {
            "Type": "AWS::EC2::RouteTable",
            "Properties": {
                "VpcId": { "Ref": "VPCMultiAZ" },
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.Public.RouteTable" }
                    }
                ]
            },
            "Metadata": {}
        },
        "PublicTrafficForPublicRouteTable": {
            "Type": "AWS::EC2::Route",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "DestinationCidrBlock": "0.0.0.0/0",
                "GatewayId": { "Ref": "InternetGateway" }
            }
        },
        "Zone1PublicSubnetPublicRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "Zone1PublicSubnet" }
            }
        },
        "Zone2PublicSubnetPublicRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "Zone2PublicSubnet" }
            }
        },
        "Zone3PublicSubnetPublicRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "Zone3PublicSubnet" }
            }
        },
        "Zone4PublicSubnetPublicRouteAssociation": {
            "Type": "AWS::EC2::SubnetRouteTableAssociation",
            "Properties": {
                "RouteTableId": { "Ref": "PublicRouteTable" },
                "SubnetId": { "Ref": "Zone4PublicSubnet" }
            }
        },
        "InternetGateway": {
            "Type": "AWS::EC2::InternetGateway",
            "Properties": {
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.InternetGateway" }
                    }
                ]
            }
        },
        "VPCInternetGatewayAttachment": {
            "Type": "AWS::EC2::VPCGatewayAttachment",
            "Properties": {
                "InternetGatewayId": { "Ref": "InternetGateway" },
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "VPCPrivateHostedZone": {
            "Type": "AWS::Route53::HostedZone",
            "Properties": {
                "HostedZoneConfig": {
                    "Comment": { "Fn::Sub": "The private hosted zone for the ${Environment} environment." }
                },
                "Name": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "HostedZone"] },
                "VPCs": [{
                    "VPCId": { "Ref": "VPCMultiAZ" },
                    "VPCRegion": { "Ref": "AWS::Region" }
                }],
                "HostedZoneTags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.PrivateHostedZone" }
                    }
                ]
            }
        },
        "WebServerSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "WebServerSG",
                "GroupDescription": "Web server security group",
                "SecurityGroupIngress": [{
                    "IpProtocol": "tcp",
                    "FromPort": "80",
                    "ToPort": "80",
                    "CidrIp": "0.0.0.0/0"
                }],
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.WebServerSG" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        },
        "SSHSG": {
            "Type": "AWS::EC2::SecurityGroup",
            "Properties": {
                "GroupName": "SSHSG",
                "GroupDescription": "SSH security group",
                "SecurityGroupIngress": [{
                    "IpProtocol": "tcp",
                    "FromPort": "22",
                    "ToPort": "22",
                    "CidrIp": "0.0.0.0/0"
                }],
                "Tags": [{
                        "Key": "7mb:Env",
                        "Value": { "Ref": "Environment" }
                    },
                    {
                        "Key": "Name",
                        "Value": { "Fn::Sub": "${Environment}.SSHSG" }
                    }
                ],
                "VpcId": { "Ref": "VPCMultiAZ" }
            }
        }
    },
    "Outputs": {
        "EnvVPCId": {
            "Description": "The VPC ID associated with the environment.",
            "Value": { "Ref": "VPCMultiAZ" },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:VPC" }
            }
        },
        "EnvVPCType": {
            "Description": "Whether or not the VPC is setup as single availability zone or multiple.",
            "Value": "MultiAZ",
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:VPC:Type" }
            }
        },
        "EnvRegion": {
            "Description": "The AWS Region used with the environment.",
            "Value": { "Ref": "AWS::Region" },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:Region" }
            }
        },
        "EnvVPCZones": {
            "Description": "The Availability Zones used for the environment.",
            "Value": {
                "Fn::Join": ["|", [
                    { "Fn::Select": ["0", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
                    { "Fn::Select": ["1", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] }
                ]]
            },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:Zones" }
            }
        },
        "EnvVPCDefaultZone": {
            "Description": "The default Availability Zone used for the environment.",
            "Value": { "Fn::Select": ["0", { "Fn::GetAZs": { "Ref": "AWS::Region" } }] },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:Zones:Default" }
            }
        },
        "EnvVPCSubnets": {
            "Description": "The subnets created for the environment.",
            "Value": {
                "Fn::Join": ["|", [
                    { "Ref": "Zone1PublicSubnet" },
                    { "Ref": "Zone2PublicSubnet" }
                ]]
            },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:Subnets" }
            }
        },
        "EnvVPCPublicSubnets": {
            "Description": "The public subnets created for the environment.",
            "Value": {
                "Fn::Join": ["|", [
                    { "Ref": "Zone1PublicSubnet" },
                    { "Ref": "Zone2PublicSubnet" }
                ]]
            },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:Subnets:Public" }
            }
        },
        "EnvVPCRouteTables": {
            "Description": "The route tables created for the environment.",
            "Value": {
                "Fn::Join": ["|", [
                    { "Ref": "PublicRouteTable" }
                ]]
            },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:RouteTables" }
            }
        },
        "EnvVPCCidr": {
            "Description": "The CIDR used for the VPC in the environment.",
            "Value": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "VPC"] },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:VPC:Cidr" }
            }
        },
        "EnvVPCBaseCidr": {
            "Description": "The first two CIDR sections used for the environment.",
            "Value": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "Base"] },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:VPC:BaseCidr" }
            }
        },
        "EnvPrivateHostedZoneId": {
            "Description": "The id of the private hosted zone used for the environment.",
            "Value": { "Ref": "VPCPrivateHostedZone" },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:PrivateHostedZone" }
            }
        },
        "EnvPrivateHostedZoneName": {
            "Description": "The name of the private hosted zone used for the environment.",
            "Value": { "Fn::FindInMap": ["EnvSettings", { "Ref": "Environment" }, "HostedZone"] },
            "Export": {
                "Name": { "Fn::Sub": "${Environment}:PrivateHostedZone:Name" }
            }
        }
    }
}
